// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEXTLINKUI SNAPSHOTS TESTS bright TEXTLINKUI should not be changed 1`] = `
<a
  class="container container_bright"
  href="/"
>
  Ссылка
</a>
`;

exports[`TEXTLINKUI SNAPSHOTS TESTS dim TEXTLINKUI should not be changed 1`] = `
<a
  class="container container_dim"
  href="/"
>
  Ссылка
</a>
`;

exports[`TEXTLINKUI SNAPSHOTS TESTS gradient TEXTLINKUI should not be changed 1`] = `
<a
  class="container container_gradient"
  href="/"
>
  Ссылка
</a>
`;
